Development:Removed comment

--- a/style.css
+++ b/style.css
@@ -22,4 +22,19 @@ table, th, td {
     vertical-align: middle;
 }
 
-
+.s1 {
+        color: black;
+        font-family: Arial, sans-serif;
+        font-style: normal;
+        font-weight: bold;
+        text-decoration: none;
+        font-size: 10pt;
+    }
+ .s7 {
+        color: black;
+        font-family: Arial, sans-serif;
+        font-style: normal;
+        font-weight: bold;
+        text-decoration: none;
+        font-size: 8pt;
+    }
